// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`z-data-card-item.vue should be rendered correctly 1`] = `
<div
  class="root"
  data-z-data-card-item=""
  icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
>
  <div
    class="icon"
  >
    <v-icon-stub>
      M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
    </v-icon-stub>
  </div>
  <div
    class="content"
  >
    <div
      class="text-caption label"
    >
      Title
    </div>
    <div
      class="text-body-2 text--primary value"
    >
      BATTLE AND ROMANCE
    </div>
  </div>
</div>
`;

exports[`z-data-card-item.vue should be rendered correctly without icon 1`] = `
<div
  class="root"
  data-z-data-card-item=""
>
  <div
    class="icon"
  >
    <!---->
  </div>
  <div
    class="content"
  >
    <div
      class="text-caption label"
    >
      Title
    </div>
    <div
      class="text-body-2 text--primary value"
    >
      BATTLE AND ROMANCE
    </div>
  </div>
</div>
`;

exports[`z-data-card-item.vue should be rendered correctly without slots 1`] = `
<div
  class="root"
  data-z-data-card-item=""
  icon="M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z"
  label="Title"
  value="THE SHOW"
>
  <div
    class="icon"
  >
    <v-icon-stub>
      M18,15H16V17H18M18,11H16V13H18M20,19H12V17H14V15H12V13H14V11H12V9H20M10,7H8V5H10M10,11H8V9H10M10,15H8V13H10M10,19H8V17H10M6,7H4V5H6M6,11H4V9H6M6,15H4V13H6M6,19H4V17H6M12,7V3H2V21H22V7H12Z
    </v-icon-stub>
  </div>
  <div
    class="content"
  >
    <div
      class="text-caption label"
    >
      Title
    </div>
    <div
      class="text-body-2 text--primary value"
    >
      THE SHOW
    </div>
  </div>
</div>
`;
